feat: clase 16 - final de la clase 1 de ngrx

--- a/src/app/components/actions-buttons/actions-buttons.component.html
+++ b/src/app/components/actions-buttons/actions-buttons.component.html
@@ -1,1 +1,3 @@
-<button>-</button> <button>+</button>
+<button (click)="decrease()">-</button>
+<button (click)="increment()">+</button>
+<button (click)="reset()">Reset</button>
